<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/index_ly"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/index_ly01"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_01"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/index_ly02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:background="#FF0000"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/index_ly03"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:background="@drawable/bottom_bar_bg"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/index_ly03_01"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgview01"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:background="@drawable/camera_icon" />

            <TextView
      			android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bottom_01" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/index_ly03_02"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgview02"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:background="@drawable/photo_icon" />

            <TextView
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bottom_02" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/index_ly03_03"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
           
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgview03"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:background="@drawable/user_icon" />

            <TextView
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bottom_03" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>