<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/upload_ly"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/upload_ly01"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/upload_title01"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/upload_ly02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5.65"
        android:background="#FF0000"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <ImageView
            android:id="@+id/camaraPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:src="@drawable/welcome_anter_btn" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/upload_ly03"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:background="@drawable/bottom_bar_bg"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/upload_ly03_01"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"  
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
      			android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/upload_button01" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/upload_ly03_02"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.50"
            android:gravity="center"
            android:orientation="vertical" >
          
            <TextView
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/upload_button02"/>
        </LinearLayout>

        
    </LinearLayout>

</LinearLayout>